_fixtures/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-node-lease
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-public
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
