_fixtures/gateway-narrow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway-narrow
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'totallysafe.com'
      port:
        name: http
        number: 80
        protocol: HTTP
