_fixtures/destinationrule-empty-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: empty-tls-policy
  namespace: default
spec:
  host: example.com
  trafficPolicy: {}
