_fixtures/destinationrule-empty-traffic-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: empty-traffic-policy
  namespace: default
spec:
  host: example.com
