_fixtures/authz-httpbin2-viewer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin2-viewer
  namespace: default
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/httpbin1
        - cluster.local/ns/default/sa/httpbin2
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app: httpbin2
